fixed the bug of boostrap modal overflow.

--- a/CoordinationService/public/stylesheets/justified-nav.css
+++ b/CoordinationService/public/stylesheets/justified-nav.css
@@ -90,3 +90,7 @@ body {
   content:"*";
   color:red;
 }
+.modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+}
